--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.13.3",
-    "oneapm": "^1.2.8"
+    "oneapm": "^1.2.8",
+    "redis": "^1.0.0"
   }
 }
